# wgsl-toy

./: .gitignore  CNAME  Cargo.toml  Trunk.toml  build.sh  index.html  index.js  index.mjs  index2.html  initializer.mjs  manifest.json  package-lock.json  package.json  rust-toolchain.toml  shaderwheels.js  sw.js  webpack.config.js  wgsl-toy.js  wgsl-toy_bg.wasm
.cargo/: config.toml
.github/workflows/: pages.yml
assets/: _headers  sw.js  teststuff.js
codemirror-wgsl/: Cargo.toml  esbuild.js  package-lock.json  package.js  package.json
codemirror-wgsl/src/: lib.rs  package.js
shaderwheels/: Cargo.toml
shaderwheels-logic/: Cargo.toml
shaderwheels-logic/src/: api-endpoint.txt  compute.wgsl  frag.wgsl  lib.rs  private-config.json  rendering.rs  vert.wgsl  web.rs
shaderwheels-logic/src/rendering/: communication.rs  graphics_backend_client.rs  graphics_backend_worker.rs  legacy_graphics.rs  shader_config.rs
shaderwheels-logic/src/rendering/graphics_backend_worker/: compute_worker.rs  fragment_worker.rs  shared.rs  worker_manager.rs
shaderwheels/src/: app.rs  main.rs
shaderwheels/src/app/: editor_gui.rs  egui_shaderwheels_logic.rs  error_viewer.rs  shader_content_manager.rs
src/: app.rs  codemirror_leptos.rs  compute.wgsl  compute_canvas.rs  main.rs  shader_editor.rs  shader_editors.rs
src/app/: cfg_pane.rs  editor_gui.rs  egui_shaderwheels_logic.rs  eguice_syntax.rs  error_viewer.rs  tiles_tree_stuff.rs
src/shader_editor/: codemirror_leptos.rs  compute_canvas.rs  gpu_records.rs  reactive_gpu.rs
