[package]
name = "wgsl-toy"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.9", features = ["csr"] }
leptos_router = "0.8.7"
reactive_stores = "0.2.5"
web-sys = {version = "0.3.0", features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement']}
wgpu = {version="26.0.1", features = ["webgl"]}
codemirror-wgsl = {path = "./codemirror-wgsl"}
leptos-use = "0.16.2"


[dependencies.image]
version = "0.25.8"
default-features = false
features = ["png"]
