[package]
name = "shaderwheels-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
openidconnect = "4.0.1"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wgpu = {version="25.0.2"}
comp_versions = {git=""}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"