[package]
name = "shaderwheels-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
openidconnect = "4.0.1"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wgpu = {version="25.0.2", features=["glsl"]}
cardigan-incremental = {git="https://github.com/robin-condition/cardigan.git"}
async-std = "1.13.2"
console_error_panic_hook = "0.1.7"
wasm_thread = "0.3.3"
wasm-bindgen-rayon = "1.3.0"
rayon = "1.11.0"
wasm-mt = "0.1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = {version = "*", features=[
    "console",
    "DedicatedWorkerGlobalScope",
    "Document",
    "HtmlElement",
    "MessageEvent",
    "Node",
    "Text",
    "Url",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
]}
log = "0.4.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"
